--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  height: 5000px;
 }
 
 /* .main-btn {
@@ -156,3 +155,51 @@ body {
   background-color: var(--dark-color);
 }
 /* END Start-project*/
+/* START Subscribe*/
+.subscribe {
+  background-color: var(--yellow-color);
+}
+.subscribe input[type="text"] {
+  border: none;
+  border-bottom: 1px solid #fff;
+  outline: none;
+}
+.subscribe ::placeholder {
+  color: #fff;
+}
+.subscribe input[type="submit"] {
+  background-color: var(--dark-color);
+  color: var(--yellow-color);
+}
+/* END Subscribe*/
+/* START Footer */
+.footer {
+  background-color: var(--dark-color);
+}
+.footer .yellow-color {
+  color: var(--yellow-color);
+}
+.footer .green-color {
+  color: var(--green-color);
+}
+.footer .icons li {
+  width: 2.2rem;
+  height: 2.2rem;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer .icons li:nth-child(1) {
+  background-color: #1877f2;
+}
+.footer .icons li:nth-child(2) {
+  background-color: #1da1f2;
+}
+.footer .icons li:nth-child(3) {
+  background-color: #0077b5;
+}
+.footer .icons li:nth-child(4) {
+  background-color: #ff0000;
+}
+/* END Footer */
