--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,31 @@ body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-
+/* for javascript */
+.box-card {
+  position: relative;
+  opacity: 0;
+  top: 10rem;
+  transition: 1s;
+}
+.box-card.show {
+  animation: showCard 1s ease-in-out 1 both;
+}
+@keyframes showCard {
+  0% {
+    opacity: 0;
+    top: 10rem;
+  }
+  50% {
+    opacity: 0.5;
+    top: 5rem;
+  }
+  100% {
+    opacity: 1;
+    top: 0;
+  }
+}
+/* ///////////////// */
 /* .main-btn {
   color: var(--yellow-color);
   background-color: var(--red-bg);
